feat: добавлено редактирование товара-3
