# src/main/java/com/warehouse/controller/ItemController.java
@@ -1,19 +1,20 @@
 package com.warehouse.controller;
 
 import com.warehouse.dto.request.CreateItemRequest;
-import com.warehouse.dto.responce.ItemResponse;
-import com.warehouse.dto.ItemDetails;
-import com.warehouse.dto.ItemUpdateRequest;
+import com.warehouse.dto.response.ItemResponse;
+import com.warehouse.dto.response.ItemDetails;
+import com.warehouse.dto.request.UpdateItemRequest;
 import com.warehouse.service.ItemService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 
@@ -29,13 +30,14 @@ public class ItemController {
     @PreAuthorize("hasRole('ADMIN')")
     public ItemResponse createItem(@Valid @RequestBody CreateItemRequest request) {
         return itemService.createItem(request);
-    @PutMapping("/{itemId}")
-    @PreAuthorize("hasRole('ADMIN')") // Spring подставит ROLE_ и найдет ROLE_ADMIN
-    public ResponseEntity<ItemDetails> updateItem(
-            @PathVariable Long itemId,
-            @Valid @RequestBody ItemUpdateRequest request) {
+    }
 
-        ItemDetails updatedItem = itemService.updateItem(itemId, request);
-        return ResponseEntity.ok(updatedItem);
+    @PutMapping("/{itemId}")
+    @ResponseStatus(HttpStatus.OK)
+    @PreAuthorize("hasRole('ADMIN')")
+    public ItemDetails updateItem(
+            @PathVariable Long itemId,
+            @Valid @RequestBody UpdateItemRequest request) {
+        return itemService.updateItem(itemId, request);
     }
 }
